update conf & readme

--- a/default.conf
+++ b/default.conf
@@ -1,32 +1,32 @@
 upstream front_servers {
-    server URL:PORT
+    server {{URL}}:3000;
 }
+
 upstream api_servers {
-    server URL:PORT
+    server {{URL}}:4000;
 }
+
 upstream chat_servers {
-    server URL:PORT
-    server URL:PORT
+    server {{URL}}:3001;
 }
 
 server {
         listen 80;
         location / {
-            proxy_pass  front_servers;
+            proxy_pass  http://front_servers;
         }
 }
 
 server {
         listen 4000;
         location / {
-            proxy_pass  api_servers;
+            proxy_pass  http://api_servers;
         }
 }
 
 server {
         listen 3001;
         location / {
-            proxy_pass  chat_servers;
+            proxy_pass  http://chat_servers;
         }
 }
-         
