--- a/default.conf
+++ b/default.conf
@@ -6,14 +6,19 @@ upstream api_servers {
     server {{URL}}:4000;
 }
 
-upstream chat_servers {
-    server {{URL}}:3001;
+upstream socket_servers {
+    ip_hash;
+    server {{URL}}:3002;
+    server {{URL}}:3003;
 }
 
 server {
         listen 80;
         location / {
             proxy_pass  http://front_servers;
+        }
+        location /metrics {
+            stub_status;
         }
 }
 
@@ -25,8 +30,14 @@ server {
 }
 
 server {
-        listen 3001;
-        location / {
-            proxy_pass  http://chat_servers;
-        }
+    listen 3001;
+    location / {
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_http_version 1.1;
+        
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header Host $host;
+        proxy_pass  http://socket_servers;
+    }
 }
